[package]
name = "kafka-proxy"
description = "Takes in HTTP Posts, and sends them to a Kafka Server."
version = "0.2.0"
authors = ["Eric Coan <ecoan@instructure.com>"]
license = "MIT"
license-file = "LICENSE"
homepage = "https://github.com/SecurityInsanity/kafka-proxy"
repository = "https://github.com/SecurityInsanity/kafka-proxy"

[dependencies]

bodyparser = "0.4.1"
iron = "0.4.0"
kafka = "0.5.0"
lazy_static = "0.2.1"
openssl = "0.7.14"
router = "0.2.0"
