[package]
name = "kafka-proxy"
description = "Takes in HTTP Posts, and sends them to a Kafka Server."
version = "0.7.0"
authors = ["Eric Coan <ecoan@instructure.com>"]
license = "MIT"
homepage = "https://github.com/SecurityInsanity/kafka-proxy"
repository = "https://github.com/SecurityInsanity/kafka-proxy"

[features]
default = []

stats-statsd = ["cadence"]
stats-prometheus = ["prometheus"]

reporter-slack = ["slack-hook"]

[dependencies]
bodyparser = "0.4"
clap = "2.14"
iron = "0.4"
jfs = "0.2"
kafka = "0.5"
lazy_static = "0.2"
openssl = "0.7"
router = "0.2"
rustc-serialize = "0.3"

cadence = { version = "0.8.0", optional = true }
prometheus = { version = "0.2", optional = true }

slack-hook = { version = "0.2", optional = true }
